--- a/bower.json
+++ b/bower.json
@@ -3,27 +3,28 @@
   "description": "databse project",
   "main": "app.js",
   "authors": [
-    "Atef Haque <atefth@gmail.com>"
+  "Atef Haque <atefth@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
-    "angularJS",
-    "Laravel"
+  "angularJS",
+  "Laravel"
   ],
   "moduleType": [],
   "homepage": "",
   "private": true,
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
+  "**/.*",
+  "node_modules",
+  "bower_components",
+  "test",
+  "tests"
   ],
   "dependencies": {
     "angular": "~1.4.7",
     "angular-bootstrap": "~0.14.3",
     "bootstrap": "~3.3.5",
-    "components-font-awesome": "~4.4.0"
+    "components-font-awesome": "~4.4.0",
+    "angular-flash-alert": "~1.1.1"
   }
 }
